--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <div class="container">
   <div class="card">
     <img class="img" src="./images/image-qr-code.png" alt="qr_code">
-    <h1 class="title">Improve your front-end skills by building projects</h1>
-    <p class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <h1 class="title">Improve your front-end </br>skills by building projects</h1>
+    <p class="text">Scan the QR code to visit Frontend </br>Mentor and take your coding skills to </br>the next level</p>
   </div>
 
 </div>
